[gd_scene load_steps=18 format=2]

[ext_resource path="res://tileset/tilemap_house_interior.tres" type="TileSet" id=1]
[ext_resource path="res://maps/chapter1/scripts/npc_patient1.gd" type="Script" id=2]
[ext_resource path="res://sprites/sprsheet_patients.png" type="Texture" id=3]
[ext_resource path="res://areas/area_change_map.tscn" type="PackedScene" id=4]
[ext_resource path="res://tileset/scripts/set_camera_limit.gd" type="Script" id=5]
[ext_resource path="res://entities/entity_mc/entity_mc.tscn" type="PackedScene" id=6]
[ext_resource path="res://maps/chapter1/scripts/chapter1-patient_house.gd" type="Script" id=7]
[ext_resource path="res://dialogue/dialogue_system.tscn" type="PackedScene" id=8]
[ext_resource path="res://dialogue/dialogue_holder.tscn" type="PackedScene" id=9]
[ext_resource path="res://sprites/spr_patient1/spr_angry.png" type="Texture" id=10]
[ext_resource path="res://sprites/spr_mc/spr_concerned.png" type="Texture" id=11]
[ext_resource path="res://sprites/spr_mc/spr_happy.png" type="Texture" id=12]
[ext_resource path="res://sprites/spr_patient1/spr_neutral.png" type="Texture" id=13]
[ext_resource path="res://sprites/spr_mc/spr_neutral.png" type="Texture" id=14]
[ext_resource path="res://sprites/spr_patient1/spr_happy.png" type="Texture" id=15]

[sub_resource type="CircleShape2D" id=1]
radius = 24.0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 8, 8 )

[node name="chapter1-patient_house" type="Node2D"]
script = ExtResource( 7 )

[node name="tilemap_house_interior" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
collision_layer = 8
collision_mask = 0
format = 1
tile_data = PoolIntArray( 327671, 4, 65537, 327672, 4, 65537, 327673, 4, 65537, 327674, 4, 65537, 327675, 4, 65537, 327676, 4, 65537, 327677, 4, 65537, 327678, 4, 65537, 327679, 4, 65537, 262144, 4, 65537, 262145, 4, 65537, 262146, 4, 65537, 262147, 4, 65537, 262148, 4, 65537, 262149, 4, 65537, 262150, 4, 65537, 262151, 4, 65537, 262152, 4, 65537, 262153, 4, 65537, 262154, 4, 65537, 262155, 4, 65537, 262156, 4, 65537, 262157, 4, 65537, 262158, 4, 65537, 262159, 4, 65537, 393207, 4, 65537, 393208, 4, 65537, 393209, 4, 65537, 393210, 4, 65537, 393211, 4, 65537, 393212, 4, 65537, 393213, 4, 65537, 393214, 4, 65537, 393215, 4, 65537, 327680, 4, 65537, 327681, 4, 65537, 327682, 4, 65537, 327683, 4, 65537, 327684, 4, 65537, 327685, 4, 65537, 327686, 4, 65537, 327687, 4, 65537, 327688, 4, 65537, 327689, 4, 65537, 327690, 4, 65537, 327691, 4, 65537, 327692, 4, 65537, 327693, 4, 65537, 327694, 4, 65537, 327695, 4, 65537, 458743, 4, 65537, 458744, 4, 65537, 458745, 4, 65537, 458746, 4, 65537, 458747, 4, 65537, 458748, 4, 65537, 458749, 4, 65537, 458750, 4, 65537, 458751, 4, 65537, 393216, 4, 65537, 393217, 4, 65537, 393218, 4, 65537, 393219, 4, 65537, 393220, 4, 65537, 393221, 4, 65537, 393222, 4, 65537, 393223, 4, 65537, 393224, 4, 65537, 393225, 4, 65537, 393226, 4, 65537, 393227, 4, 65537, 393228, 4, 65537, 393229, 4, 65537, 393230, 4, 65537, 393231, 4, 65537, 524279, 4, 65537, 524280, 4, 65537, 524281, 4, 65537, 524282, 4, 65537, 524283, 4, 65537, 524284, 4, 65537, 524285, 4, 65537, 524286, 4, 65537, 524287, 4, 65537, 458752, 4, 65537, 458753, 4, 65537, 458754, 4, 65537, 458755, 4, 65537, 458756, 4, 65537, 458757, 4, 65537, 458758, 4, 65537, 458759, 4, 65537, 458760, 4, 65537, 458761, 4, 65537, 458762, 4, 65537, 458763, 4, 65537, 458764, 4, 65537, 458765, 4, 65537, 458766, 4, 65537, 458767, 4, 65537, 589815, 4, 65537, 589816, 4, 65537, 589817, 4, 65537, 589818, 4, 65537, 589819, 4, 65537, 589820, 4, 65537, 589821, 4, 65537, 589822, 4, 65537, 589823, 4, 0, 524288, 4, 1, 524289, 4, 1, 524290, 4, 1, 524291, 4, 1, 524292, 4, 1, 524293, 4, 1, 524294, 4, 1, 524295, 4, 1, 524296, 4, 2, 524297, 4, 65537, 524298, 4, 65537, 524299, 4, 65537, 524300, 4, 65537, 524301, 4, 65537, 524302, 4, 65537, 524303, 4, 65537, 655351, 4, 65537, 655352, 4, 65537, 655353, 4, 65537, 655354, 4, 65537, 655355, 4, 65537, 655356, 4, 65537, 655357, 4, 65537, 655358, 4, 65537, 655359, 4, 65536, 589824, 6, 0, 589825, 9, 0, 589826, 6, 0, 589827, 6, 0, 589828, 6, 0, 589829, 6, 0, 589830, 9, 0, 589831, 6, 0, 589832, 4, 65538, 589833, 4, 65537, 589834, 4, 65537, 589835, 4, 65537, 589836, 4, 65537, 589837, 4, 65537, 589838, 4, 65537, 589839, 4, 65537, 720887, 4, 65537, 720888, 4, 65537, 720889, 4, 65537, 720890, 4, 65537, 720891, 4, 65537, 720892, 4, 65537, 720893, 4, 65537, 720894, 4, 65537, 720895, 4, 65536, 655368, 4, 65538, 655369, 4, 65537, 655370, 4, 65537, 655371, 4, 65537, 655372, 4, 65537, 655373, 4, 65537, 655374, 4, 65537, 655375, 4, 65537, 786423, 4, 65537, 786424, 4, 65537, 786425, 4, 65537, 786426, 4, 65537, 786427, 4, 65537, 786428, 4, 65537, 786429, 4, 65537, 786430, 4, 65537, 786431, 4, 65536, 720896, 8, 0, 720897, 8, 0, 720898, 8, 0, 720899, 8, 0, 720900, 8, 0, 720901, 8, 0, 720902, 8, 0, 720903, 8, 0, 720904, 4, 65538, 720905, 4, 65537, 720906, 4, 65537, 720907, 4, 65537, 720908, 4, 65537, 720909, 4, 65537, 720910, 4, 65537, 720911, 4, 65537, 851959, 4, 65537, 851960, 4, 65537, 851961, 4, 65537, 851962, 4, 65537, 851963, 4, 65537, 851964, 4, 65537, 851965, 4, 65537, 851966, 4, 65537, 851967, 4, 65536, 786432, 8, 0, 786433, 8, 0, 786434, 8, 0, 786435, 8, 0, 786436, 8, 0, 786437, 8, 0, 786438, 8, 0, 786439, 8, 0, 786440, 4, 65538, 786441, 4, 65537, 786442, 4, 65537, 786443, 4, 65537, 786444, 4, 65537, 786445, 4, 65537, 786446, 4, 65537, 786447, 4, 65537, 917495, 4, 65537, 917496, 4, 65537, 917497, 4, 65537, 917498, 4, 65537, 917499, 4, 65537, 917500, 4, 65537, 917501, 4, 65537, 917502, 4, 65537, 917503, 4, 65536, 851968, 8, 0, 851969, 8, 0, 851970, 8, 0, 851971, 8, 0, 851972, 8, 0, 851973, 8, 0, 851974, 8, 0, 851975, 8, 0, 851976, 4, 65538, 851977, 4, 65537, 851978, 4, 65537, 851979, 4, 65537, 851980, 4, 65537, 851981, 4, 65537, 851982, 4, 65537, 851983, 4, 65537, 983031, 4, 65537, 983032, 4, 65537, 983033, 4, 65537, 983034, 4, 65537, 983035, 4, 65537, 983036, 4, 65537, 983037, 4, 65537, 983038, 4, 65537, 983039, 4, 65536, 917504, 8, 0, 917505, 8, 0, 917506, 8, 0, 917507, 8, 0, 917508, 8, 0, 917509, 8, 0, 917510, 8, 0, 917511, 8, 0, 917512, 4, 65538, 917513, 4, 65537, 917514, 4, 65537, 917515, 4, 65537, 917516, 4, 65537, 917517, 4, 65537, 917518, 4, 65537, 917519, 4, 65537, 1048567, 4, 65537, 1048568, 4, 65537, 1048569, 4, 65537, 1048570, 4, 65537, 1048571, 4, 65537, 1048572, 4, 65537, 1048573, 4, 65537, 1048574, 4, 65537, 1048575, 4, 65536, 983040, 8, 0, 983041, 8, 0, 983042, 8, 0, 983043, 8, 0, 983044, 8, 0, 983045, 8, 0, 983046, 8, 0, 983047, 8, 0, 983048, 4, 65538, 983049, 4, 65537, 983050, 4, 65537, 983051, 4, 65537, 983052, 4, 65537, 983053, 4, 65537, 983054, 4, 65537, 983055, 4, 65537, 1114103, 4, 65537, 1114104, 4, 65537, 1114105, 4, 65537, 1114106, 4, 65537, 1114107, 4, 65537, 1114108, 4, 65537, 1114109, 4, 65537, 1114110, 4, 65537, 1114111, 4, 65536, 1048576, 8, 0, 1048577, 8, 0, 1048578, 8, 0, 1048579, 8, 0, 1048580, 8, 0, 1048581, 8, 0, 1048582, 8, 0, 1048583, 8, 0, 1048584, 4, 65538, 1048585, 4, 65537, 1048586, 4, 65537, 1048587, 4, 65537, 1048588, 4, 65537, 1048589, 4, 65537, 1048590, 4, 65537, 1048591, 4, 65537, 1179639, 4, 65537, 1179640, 4, 65537, 1179641, 4, 65537, 1179642, 4, 65537, 1179643, 4, 65537, 1179644, 4, 65537, 1179645, 4, 65537, 1179646, 4, 65537, 1179647, 4, 65536, 1114112, 8, 0, 1114113, 8, 0, 1114114, 8, 0, 1114115, 8, 0, 1114116, 8, 0, 1114117, 8, 0, 1114118, 8, 0, 1114119, 8, 0, 1114120, 4, 65538, 1114121, 4, 65537, 1114122, 4, 65537, 1114123, 4, 65537, 1114124, 4, 65537, 1114125, 4, 65537, 1114126, 4, 65537, 1114127, 4, 65537, 1245175, 4, 65537, 1245176, 4, 65537, 1245177, 4, 65537, 1245178, 4, 65537, 1245179, 4, 65537, 1245180, 4, 65537, 1245181, 4, 65537, 1245182, 4, 65537, 1245183, 4, 65536, 1179648, 8, 0, 1179649, 8, 0, 1179650, 8, 0, 1179651, 8, 0, 1179652, 8, 0, 1179653, 8, 0, 1179654, 8, 0, 1179655, 8, 0, 1179656, 4, 65538, 1179657, 4, 65537, 1179658, 4, 65537, 1179659, 4, 65537, 1179660, 4, 65537, 1179661, 4, 65537, 1179662, 4, 65537, 1179663, 4, 65537, 1310711, 4, 65537, 1310712, 4, 65537, 1310713, 4, 65537, 1310714, 4, 65537, 1310715, 4, 65537, 1310716, 4, 65537, 1310717, 4, 65537, 1310718, 4, 65537, 1310719, 4, 65536, 1245184, 8, 0, 1245185, 8, 0, 1245186, 8, 0, 1245187, 8, 0, 1245188, 8, 0, 1245189, 8, 0, 1245190, 8, 0, 1245191, 8, 0, 1245192, 4, 65538, 1245193, 4, 65537, 1245194, 4, 65537, 1245195, 4, 65537, 1245196, 4, 65537, 1245197, 4, 65537, 1245198, 4, 65537, 1245199, 4, 65537, 1376247, 4, 65537, 1376248, 4, 65537, 1376249, 4, 65537, 1376250, 4, 65537, 1376251, 4, 65537, 1376252, 4, 65537, 1376253, 4, 65537, 1376254, 4, 65537, 1376255, 4, 131072, 1310720, 4, 131073, 1310721, 4, 131073, 1310722, 5, 2, 1310723, 8, 0, 1310724, 5, 0, 1310725, 4, 131073, 1310726, 4, 131073, 1310727, 4, 131073, 1310728, 4, 131074, 1310729, 4, 65537, 1310730, 4, 65537, 1310731, 4, 65537, 1310732, 4, 65537, 1310733, 4, 65537, 1310734, 4, 65537, 1310735, 4, 65537, 1441783, 4, 65537, 1441784, 4, 65537, 1441785, 4, 65537, 1441786, 4, 65537, 1441787, 4, 65537, 1441788, 4, 65537, 1441789, 4, 65537, 1441790, 4, 65537, 1441791, 4, 65537, 1376256, 4, 65537, 1376257, 4, 65537, 1376258, 4, 65537, 1376259, 4, 65537, 1376260, 4, 65537, 1376261, 4, 65537, 1376262, 4, 65537, 1376263, 4, 65537, 1376264, 4, 65537, 1376265, 4, 65537, 1376266, 4, 65537, 1376267, 4, 65537, 1376268, 4, 65537, 1376269, 4, 65537, 1376270, 4, 65537, 1376271, 4, 65537, 1507319, 4, 65537, 1507320, 4, 65537, 1507321, 4, 65537, 1507322, 4, 65537, 1507323, 4, 65537, 1507324, 4, 65537, 1507325, 4, 65537, 1507326, 4, 65537, 1507327, 4, 65537, 1441792, 4, 65537, 1441793, 4, 65537, 1441794, 4, 65537, 1441795, 4, 65537, 1441796, 4, 65537, 1441797, 4, 65537, 1441798, 4, 65537, 1441799, 4, 65537, 1441800, 4, 65537, 1441801, 4, 65537, 1441802, 4, 65537, 1441803, 4, 65537, 1441804, 4, 65537, 1441805, 4, 65537, 1441806, 4, 65537, 1441807, 4, 65537, 1572855, 4, 65537, 1572856, 4, 65537, 1572857, 4, 65537, 1572858, 4, 65537, 1572859, 4, 65537, 1572860, 4, 65537, 1572861, 4, 65537, 1572862, 4, 65537, 1572863, 4, 65537, 1507328, 4, 65537, 1507329, 4, 65537, 1507330, 4, 65537, 1507331, 4, 65537, 1507332, 4, 65537, 1507333, 4, 65537, 1507334, 4, 65537, 1507335, 4, 65537, 1507336, 4, 65537, 1507337, 4, 65537, 1507338, 4, 65537, 1507339, 4, 65537, 1507340, 4, 65537, 1507341, 4, 65537, 1507342, 4, 65537, 1507343, 4, 65537, 1638391, 4, 65537, 1638392, 4, 65537, 1638393, 4, 65537, 1638394, 4, 65537, 1638395, 4, 65537, 1638396, 4, 65537, 1638397, 4, 65537, 1638398, 4, 65537, 1638399, 4, 65537, 1572864, 4, 65537, 1572865, 4, 65537, 1572866, 4, 65537, 1572867, 4, 65537, 1572868, 4, 65537, 1572869, 4, 65537, 1572870, 4, 65537, 1572871, 4, 65537, 1572872, 4, 65537, 1572873, 4, 65537, 1572874, 4, 65537, 1572875, 4, 65537, 1572876, 4, 65537, 1572877, 4, 65537, 1572878, 4, 65537, 1572879, 4, 65537, 1703927, 4, 65537, 1703928, 4, 65537, 1703929, 4, 65537, 1703930, 4, 65537, 1703931, 4, 65537, 1703932, 4, 65537, 1703933, 4, 65537, 1703934, 4, 65537, 1703935, 4, 65537, 1638400, 4, 65537, 1638401, 4, 65537, 1638402, 4, 65537, 1638403, 4, 65537, 1638404, 4, 65537, 1638405, 4, 65537, 1638406, 4, 65537, 1638407, 4, 65537, 1638408, 4, 65537, 1638409, 4, 65537, 1638410, 4, 65537, 1638411, 4, 65537, 1638412, 4, 65537, 1638413, 4, 65537, 1638414, 4, 65537, 1638415, 4, 65537 )
script = ExtResource( 5 )

[node name="tilemap_house_interior_decor" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
cell_y_sort = true
collision_layer = 8
collision_mask = 0
format = 1
tile_data = PoolIntArray( 720898, 1, 0, 720899, 1, 0, 720901, 3, 3, 786439, 0, 0, 983040, 3, 3, 1048576, 2, 0, 1048578, 3, 0 )

[node name="entity_mc" parent="tilemap_house_interior_decor" instance=ExtResource( 6 )]
position = Vector2( 72, 192 )

[node name="npc_patient1" type="Area2D" parent="tilemap_house_interior_decor"]
collision_layer = 0
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}
dialogue_transition = "res://maps/chapter1/chapter1-feeling_dungeon.tscn"
appear_location = Vector2( 160, 912 )

[node name="spr_patient" type="Sprite" parent="tilemap_house_interior_decor/npc_patient1"]
position = Vector2( 104, 192 )
texture = ExtResource( 3 )
flip_h = true
region_enabled = true
region_rect = Rect2( 0, 0, 16, 16 )

[node name="col_dialogue_area" type="CollisionShape2D" parent="tilemap_house_interior_decor/npc_patient1"]
position = Vector2( 104, 192 )
shape = SubResource( 1 )

[node name="dialogue_system" parent="tilemap_house_interior_decor/npc_patient1" instance=ExtResource( 8 )]

[node name="havekey-1" parent="tilemap_house_interior_decor/npc_patient1/dialogue_system" instance=ExtResource( 9 )]
dialogue_lines = [ [ "Mau apa?", "Ku dengar kamu di bully?", "...", "dan kamu marah ke dirimu sendiri karena itu?", "Ya, terus?", "Gini, aku tahu rasanya di bully seperti apa", "tapi, kamu tidak perlu marah pada dirimu sendiri karena ini", "Oh sangat klise", "kau memberi tahu aku itu tidak membuat apapun LEBIH BAIK" ], [ "What do you want?", "I heard that you've been bullied", "...", "and you've been hard to yourself because of that", "Yea, so what?", "Look, I know how it felt to be bullied", "but, you don't need to be angry to yourself for this", "Oh so cliche", "you telling me that wont make anything BETTER" ] ]
dialogue_picture_resource = [ ExtResource( 10 ), ExtResource( 14 ), ExtResource( 13 ), ExtResource( 11 ), ExtResource( 10 ), ExtResource( 14 ), null, ExtResource( 10 ), null ]
dialogue_command = "transition"

[node name="havekey-2" parent="tilemap_house_interior_decor/npc_patient1/dialogue_system" instance=ExtResource( 9 )]
dialogue_lines = [ [ "Apa lagi?", "Aku baru saja bicara dengan temanmu", "Terus?", "Nih, permen", "... makasih", "Gimana? Enakan?", "... ya", "Di bully memang gak enak, aku tahu itu", "Aku tidak ingin mendengarnya dari seorang psikolog", "Hei ...", "Tapi, seharusnya kamu tidak menyalahkan dirimu sendiri" ], [ "What again?", "I spoke to your friend", "So?", "Here, candy", "... thanks", "How is it? better?", "... yea", "It's not good being bullied, I know that", "I don't want to hear that from a psychologist", "Hey ...", "But, you shouldn't blame yourself for that though" ] ]
dialogue_picture_resource = [ ExtResource( 10 ), ExtResource( 14 ), ExtResource( 10 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 12 ), ExtResource( 15 ), ExtResource( 11 ), ExtResource( 15 ), ExtResource( 14 ), null ]
dialogue_command = "transition"

[node name="nokey" parent="tilemap_house_interior_decor/npc_patient1/dialogue_system" instance=ExtResource( 9 )]
dialogue_lines = [ [ "Mau apa" ], [ "What else" ] ]
dialogue_picture_resource = [ ExtResource( 10 ) ]

[node name="nokey-0" parent="tilemap_house_interior_decor/npc_patient1/dialogue_system" instance=ExtResource( 9 )]
dialogue_lines = [ [ "Apa kamu Kobus?", "Dokter? Yang diminta ibuku?", "Iya", "Aku gak butuh ini", "Jangan seperti itu", "Pasti ada alasan mengapa dia memintaku ke sini", "Apa masalahmu?", "GAK ADA" ], [ "Are you Kobus?", "Doctor? The one my mother asked?", "Yes", "I don't need this", "Don't be like that", "There must be a reason why she asked me to be here", "So what's your problem?", "NOTHING" ] ]
dialogue_picture_resource = [ ExtResource( 12 ), ExtResource( 13 ), ExtResource( 12 ), ExtResource( 10 ), ExtResource( 11 ), null, ExtResource( 12 ), ExtResource( 10 ) ]
dialogue_command = "transition"

[node name="nokey-3" parent="tilemap_house_interior_decor/npc_patient1/dialogue_system" instance=ExtResource( 9 )]
dialogue_lines = [ [ "Terima kasih, dokter", "Maaf tentang yang barusan", "Aku mengerti sekarang", "Seharusnya kuterima saja dan tidak menyalahkan diri untuk itu" ], [ "Thank you, doctor", "I'm sorry for earlier", "I realize now", "I should just accept it and not blame myself for it" ] ]
dialogue_picture_resource = [ ExtResource( 13 ), null, null, ExtResource( 15 ) ]
dialogue_command = "next_level"

[node name="area_change_map" parent="tilemap_house_interior_decor" instance=ExtResource( 4 )]
position = Vector2( 56, 344 )
destination = "res://maps/chapter1/chapter1-2.tscn"
location = Vector2( 184, 32 )

[node name="col_area_change" type="CollisionShape2D" parent="tilemap_house_interior_decor/area_change_map"]
position = Vector2( 0, -8 )
shape = SubResource( 3 )
[connection signal="body_entered" from="tilemap_house_interior_decor/npc_patient1" to="tilemap_house_interior_decor/npc_patient1" method="_on_npc_patient1_body_entered"]
[connection signal="body_exited" from="tilemap_house_interior_decor/npc_patient1" to="tilemap_house_interior_decor/npc_patient1" method="_on_npc_patient1_body_exited"]
